# vurl

./: .gitignore  README.md  dune  dune-project  vurl-eio.opam  vurl-eio.opam.template  vurl.ml  vurl.opam
doc/: dune  spec.md
doc/example/: doi.ml  dune  example.ml  git.ml  git_example.ml  resolver.ml  srtm.ml  vurl_example.ml
example/: dune  resolver.ml  srtm.ml
src/vurl/: dune  resolver.ml  resolver.mli  resource.ml  resource.mli  rpc.ml  schema.capnp  vurl.ml  vurl.mli  vurl_intf.ml
src/vurl/resolver/: dune  vurl_resolver.ml  vurl_resolver.mli
src/vurl_eio/: client.ml  dune  vurl_eio.ml  vurl_eio.mli
test/: dune  schema.json  schema.ml  test.ml  vurl.json
